syntax = "proto3";

message CommsMessage {
    double time = 1;
    oneof data {
        PositionData position_data = 2;
        ProfileData profile_data = 3;
        ChatData chat_data = 4;
        SceneData scene_data = 5;
        VoiceData voice_data = 6;
        ProfileRequestData profile_request_data = 7;
        ProfileResponseData profile_response_data = 8;
    }
}

message PositionData {
    float position_x = 1;
    float position_y = 2;
    float position_z = 3;
    float rotation_x = 4;
    float rotation_y = 5;
    float rotation_z = 6;
    float rotation_w = 7;
    bool immediate = 8;
}

message ProfileData {
    string profile_version = 1;
    string user_id = 2;
    enum ProfileType {
        DEPLOYED = 0;
        LOCAL = 1;
    }
    ProfileType profile_type = 3;
}

message ProfileRequestData {
    string profile_version = 1;
    string user_id = 2;
}

message ProfileResponseData {
    string serialized_profile = 1;
}

message ChatData {
    string message_id = 1;
    string text = 2;
}

message SceneData {
    string scene_id = 1;
    string text = 2;
}

message VoiceData {
    bytes encoded_samples = 1;
    uint32 index = 2;
}
